syntax = "proto3";

import "pet/project/internal/commonmodels/error.proto";

package pet.project.internal.input.reqreply.user.add_book_to_wish_list;

option java_multiple_files = true;

message AddBookToUsersWishListRequest {
  string user_id = 1;
  string book_id = 2;
}

message AddBookToUsersWishListResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  message Failure {
    string message = 100;
    oneof error {
      commonmodels.Error user_not_found = 1;
      commonmodels.Error book_not_found = 2;
    }
  }
}
