syntax = "proto3";

package pet.project.internal.input.reqreply.user.create;

import "pet/project/internal/commonmodels/user/user.proto";

option java_multiple_files = true;

message CreateUserRequest {
  commonmodels.user.user.User user = 1;
}

message CreateUserResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.user.user.User user = 1;
  }

  message Failure {
    string message = 100;
  }
}
