syntax = "proto3";

package pet.project.internal.input.reqreply.user.delete;

option java_multiple_files = true;

message DeleteUserByIdRequest {
  string id = 1;
}

message DeleteUserByIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  message Failure {
    string message = 100;
  }
}
